--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   background: #FFF;
-  padding: 0.5rem 2rem;
+  padding: 5px 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
