--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -6,7 +6,7 @@
   align-items: center;
   border-bottom: #ebebeb 1px solid;
   position: sticky;
-  top: -5px;
+  top: 0;
   z-index: 1000;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
