--- a/frontend/src/styles/ProfilePage.css
+++ b/frontend/src/styles/ProfilePage.css
@@ -16,6 +16,9 @@
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
+.profile-section.personal {
+  display: flex;
+}
 
 h2, h3, h4 {
   color: #333;
@@ -46,6 +49,92 @@ label {
   cursor: pointer;
   font-size: 16px;
   margin-top: 10px;
+}
+
+.score-description{
+  text-align: center;
+}
+
+.avatar-section {
+  margin-bottom: 20px;
+  text-align: center;
+  width: 30%;
+}
+
+.avatar-preview {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto 15px;
+  border: 2px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f5;
+}
+
+.avatar-preview img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.default-avatar {
+  font-size: 48px;
+  color: #555;
+  text-transform: uppercase;
+}
+
+.avatar-controls {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.avatar-upload-button {
+  padding: 8px 15px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.avatar-upload-button:hover {
+  background-color: #45a049;
+}
+
+.delete-avatar-button {
+  padding: 8px 15px;
+  background-color: #f44336;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.delete-avatar-button:hover {
+  background-color: #d32f2f;
+}
+
+.profile-personal-info {
+  width: 50%;
+}
+
+.cancel-avatar-button {
+  padding: 8px 15px;
+  background-color: #ff9800;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.cancel-avatar-button:hover {
+  background-color: #e68a00;
 }
 
 .save-button:hover, .take-test-button:hover, .retake-test-button:hover, .create-team-button:hover {
@@ -157,3 +246,56 @@ label {
 .leave-team-button:hover {
   background-color: #d32f2f;
 }
+
+
+.interests-label {
+  display: inline-flex;
+  align-items: center;
+  margin: 8px;
+  padding: 10px 15px;
+  border-radius: 8px;
+  background-color: #f8f9fa;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  user-select: none;
+}
+
+/* Добавляем кастомный чекбокс */
+.interests-label::before {
+  content: '';
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  margin-right: 12px;
+  border: 2px solid #adb5bd;
+  border-radius: 4px;
+  transition: all 0.2s ease;
+}
+
+/* Когда input:checked → применяем стили к label */
+.checkbox-interests:checked + .interests-label {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/* Изменяем цвет чекбокса, если он выбран */
+.checkbox-interests:checked + .interests-label::before {
+  border-color: white;
+  content: '✔';
+  font-size: 14px;
+  text-align: center;
+  line-height: 18px;
+}
+
+@media (min-width: 600px) {
+  .modal-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+
+  .interests-label {
+    margin: 5px;
+  }
+}
+
