--- a/frontend/src/styles/ApartmentDetailsPage.css
+++ b/frontend/src/styles/ApartmentDetailsPage.css
@@ -158,6 +158,17 @@
     cursor: not-allowed;
   }
   
+  .delete-button {
+    padding: 10px 20px;
+    background-color: #af634c;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+  }
+
   /* .info-field {
     margin: 15px 0;
     padding: 10px 0;
